--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ h1 {
 #header{
     border-bottom: 1px solid #e4e4e4 ;
     margin-bottom: 2rem;
+    display: flex;
     width: 100%;
 }
 
@@ -113,6 +114,7 @@ nav {
 
 #home .container {
     margin: 0;
+    overflow: hidden;
 }
 
 #home .image{
