--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ img {
 /*= = = = VARIABLES = = = =*/
 
 :root {
+  --header-height: 4.5rem;
   --hue: 159;
   /*HLS color mode*/
   --base-color: hsl(var(--hue) 36% 57%);
@@ -39,25 +40,67 @@ body {
   width: 23.4rem;
 }
 
-h1 {
+.title {
   font: 700 1.875rem 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
+.button {
+  background-color: var(--base-color);
+  color: var(--text-color-light);
+  display: inline-flex;
+  align-items: center;
+  height: 3.5rem;
+  padding: 0 2rem;
+  border-radius: 0.25rem;
+  font: 500 1rem 'dm sans';
+  transition: background 0.3s;
+}
+.button:hover {
+  background-color: var(--base-color-alt);
+}
+
+.divider-1 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(159, 36%, 57%, 1) 0%,
+    hsla(159, 65%, 88%, 0.34) 100%
+  );
+}
 
 /*= = = = LAYOUTS = = = =*/
+.container {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+.grid {
+  display: grid;
+  gap: 2rem;
+}
+.section {
+  padding: 5rem 0;
+}
 
 #header {
   border-bottom: 2px solid #e4e4e4;
   margin-bottom: 2rem;
+  display: flex;
+
+  width: 23.4rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: var(--body-color);
+  /* width: 100%*/
 }
 
-nav {
-  align-items: center;
-  height: 4.5rem;
-  display: flex; /*flex coloca todas as tags dentro de nav um ao lado do outro*/
-  justify-content: space-between;
+main {
+  margin-top: var(--header-height);
 }
+
+/*===== LOGO ==================*/
 
 .logo {
   font: 700 1.31rem 'Poppins', sans-serif;
@@ -68,47 +111,46 @@ nav {
   color: var(--base-color);
 }
 
-.container {
+/*===== NAVIGATION ==================*/
+
+nav {
+  height: var(--header-height);
+  display: flex; /*flex coloca todas as tags dentro de nav um ao lado do outro*/
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
-  margin-left: 1.5rem; /* 0=margin top and bottom*/
-  margin-right: 1.5rem; /* 0=margin top and bottom*/
 }
-.grid {
-  display: grid;
-  gap: 2rem;
+nav .menu {
+  opacity: 0;
 }
 
-.menu {
-  margin-right: 1.5rem;
+nav.show .menu {
+  opacity: 1;
+  visibility: visible;
+  background: var(--body--color);
+
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
 }
-.section {
-  padding: 5rem 0;
+
+nav ul li {
+  text-align: center;
 }
+
 /*= = = = HOME = = = =*/
-
+#home {
+  overflow: hidden;
+}
 #home .container {
   margin: 0;
-}
-
-#home .image img {
-  position: relative;
-  right: 2.93rem;
-}
-
-#home .text {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  text-align: center;
 }
 #home .image {
   position: relative;
 }
-
-#home .image img,
-#home .image::before {
-  border-radius: 0.25rem;
-}
-
 #home .image::before {
   content: '';
   height: 100%;
@@ -116,6 +158,39 @@ nav {
   background: var(--base-color-second);
   position: absolute;
   top: -8.8%;
-  left: 0%;
+  left: 8%;
   z-index: 0;
+}
+
+#home .image img {
+  position: relative;
+  right: 2.93rem;
+}
+
+#home .image img,
+#home .image::before {
+  border-radius: 0.25rem;
+}
+
+#home .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  text-align: center;
+}
+
+#home .text h1 {
+  margin-bottom: 1rem;
+}
+
+#home .text p {
+  margin-bottom: 2rem;
+  max-width: 100%;
+}
+
+.main {
+  height: 4.5rem;
+}
+
+.menu {
+  margin-right: 1.5rem;
 }
