--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ img {
   height: auto;
 }
 
+ul {
+  list-style: none;
+}
 /*= = = = VARIABLES = = = =*/
 
 :root {
@@ -37,7 +40,8 @@ body {
   font: 400 1rem 'DM Sans', sans-serif;
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
-  width: 23.4rem;
+  /*width: 23.4rem;*/
+  width: 100%;
 }
 
 .title {
@@ -87,17 +91,17 @@ body {
   margin-bottom: 2rem;
   display: flex;
 
-  width: 23.4rem;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
   background-color: var(--body-color);
-  /* width: 100%*/
+  width: 100%;
+  /*width: 23.4rem;*/
 }
 
 main {
-  margin-top: var(--header-height);
+  margin-top: calc(var(--header-height) + 2rem);
 }
 
 /*===== LOGO ==================*/
@@ -122,12 +126,17 @@ nav {
 }
 nav .menu {
   opacity: 0;
+  visibility: hidden;
 }
+
+/*=============================== MOSTRAR MENU =========================================*/
 
 nav.show .menu {
   opacity: 1;
   visibility: visible;
+
   background: var(--body--color);
+  background-color: var(--body-color);
 
   height: 100vh;
   width: 100vw;
@@ -135,10 +144,65 @@ nav.show .menu {
   position: fixed;
   top: 0;
   left: 0;
+  display: grid;
+  place-content: center;
+}
+
+nav.show ul.grid {
+  gap: 4rem;
 }
 
 nav ul li {
   text-align: center;
+}
+
+nav ul li a {
+  transition: color 0.3s;
+  position: relative; /*relative funcionando como o pai de li a:hover*/
+}
+
+nav ul li a:hover {
+  color: var(--base-color);
+}
+
+nav ul li a::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: var(--base-color);
+
+  position: absolute; /*position será absolute em relação ao próximo pai relative(colocar relative no pai)*/
+  left: 0;
+  bottom: -1.5rem;
+
+  transition: width 0.1s;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}
+
+/*=============================== MOSTRAR MENU =========================================*/
+
+.toggle {
+  color: var(--base-color);
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+nav .close {
+  visibility: visible;
+  opacity: 0;
+
+  position: absolute;
+  right: 1.5rem;
+
+  /*transition: ;*/
+}
+
+nav.show div.close {
+  visibility: visible;
+  opacity: 1;
 }
 
 /*= = = = HOME = = = =*/
