--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ ul {
 }
 
 /*= = = = = BASE = = = = =*/
+html {
+  scroll-behavior: smooth;
+}
 body {
   background: var(--body-color);
   font: 400 1rem 'DM Sans', sans-serif;
@@ -72,6 +75,14 @@ body {
     hsla(159, 65%, 88%, 0.34) 100%
   );
 }
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    90deg,
+    hsla(159, 36%, 57%, 1) 0%,
+    hsla(159, 65%, 88%, 0.34) 100%
+  );
+}
 
 /*= = = = LAYOUTS = = = =*/
 .container {
@@ -86,6 +97,18 @@ body {
   padding: 5rem 0;
 }
 
+.section .title {
+  margin-bottom: 1rem;
+}
+
+.section header {
+  margin-bottom: 4rem;
+}
+
+.section header strong {
+  color: var(--base-color);
+}
+
 #header {
   border-bottom: 2px solid #e4e4e4;
   margin-bottom: 2rem;
@@ -98,6 +121,10 @@ body {
   background-color: var(--body-color);
   width: 100%;
   /*width: 23.4rem;*/
+}
+
+#header.scroll {
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.8);
 }
 
 main {
@@ -127,6 +154,12 @@ nav {
 nav .menu {
   opacity: 0;
   visibility: hidden;
+  top: -20rem;
+  transition: 0.2s;
+}
+
+nav .menu ul {
+  display: none;
 }
 
 /*=============================== MOSTRAR MENU =========================================*/
@@ -146,6 +179,10 @@ nav.show .menu {
   left: 0;
   display: grid;
   place-content: center;
+}
+
+nav.show .menu ul {
+  display: grid;
 }
 
 nav.show ul.grid {
@@ -195,14 +232,16 @@ nav .close {
   opacity: 0;
 
   position: absolute;
+  top: -1.5rem;
   right: 1.5rem;
 
-  /*transition: ;*/
+  transition: 0.2s;
 }
 
 nav.show div.close {
   visibility: visible;
   opacity: 1;
+  top: 1.5rem;
 }
 
 /*= = = = HOME = = = =*/
@@ -256,5 +295,86 @@ nav.show div.close {
 }
 
 .menu {
+  margin-right: -2rem;
+}
+
+/*=============================== About =========================================*/
+
+#about {
+  background: white;
+}
+
+#about .container {
+  margin: 0;
+}
+#about .image {
+  position: relative;
+}
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+
+#about .text {
+  margin-left: 1.5rem;
   margin-right: 1.5rem;
+  text-align: center;
+}
+
+/*=============================== Services =========================================*/
+
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: 0.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0;
+  text-align: center;
+}
+
+.card i {
+  display: block;
+  margin-bottom: 1.5rem;
+  font-size: 4rem;
+  color: var(--base-color);
+}
+
+.card .title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+/*=============================== TESTIMONIALS =========================================*/
+
+#testimonials {
+  background: white;
+}
+
+#testimonials blockquote {
+  padding: 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 0.25rem;
+}
+
+#testimonials blockquote p span {
+  font: 700 3rem serif;
+  color: var(--base-color);
 }
