--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ nav.show div.close {
 
 .card {
   padding: 3.625rem 2rem;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.18);
   border-bottom: 0.25rem solid var(--base-color);
   border-radius: 0.25rem 0.25rem 0 0;
   text-align: center;
@@ -374,7 +374,40 @@ nav.show div.close {
   border-radius: 0.25rem;
 }
 
-#testimonials blockquote p span {
+#testimonials blockquote p {
+  text-indent: 1.875rem;
+  position: relative;
+  margin-bottom: 1.5rem;
+  color:var(--text-color);
+}
+
+#testimonials blockquote span {
   font: 700 3rem serif;
+  position: absolute;
+  top: -0.9rem;
+  left: -1.875rem;
   color: var(--base-color);
+}
+
+#testimonials cite {
+  display: flex;
+  align-items: center;
+  font-style: normal;
+}
+
+#testimonials cite img {
+  width: 2rem;
+  height: 2rem;
+  object-fit: cover;
+  clip-path: circle();
+  margin-right: 0.5rem;
+}
+
+
+
+
+.swiper-slide {
+
+  height: auto;
+  padding: 4rem 1rem;
 }
