--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,17 @@ nav.show div.close {
   background: white;
 }
 
+#testimonials .container {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+#testimonials header {
+  margin-bottom: 0;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 #testimonials blockquote {
   padding: 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
@@ -378,7 +389,7 @@ nav.show div.close {
   text-indent: 1.875rem;
   position: relative;
   margin-bottom: 1.5rem;
-  color:var(--text-color);
+  color: var(--text-color);
 }
 
 #testimonials blockquote span {
@@ -403,11 +414,39 @@ nav.show div.close {
   margin-right: 0.5rem;
 }
 
-
-
-
 .swiper-slide {
-
   height: auto;
   padding: 4rem 1rem;
+}
+
+.swiper-pagination-bullet-active {
+  background: var(--base-color);
+}
+
+/*=============================== Contact =========================================*/
+
+#contact .grid {
+  gap: 4rem;
+}
+
+#contact .text p {
+  margin-bottom: 2rem;
+}
+
+#contact .button i,
+#contact ul li i {
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
+}
+
+#contact ul.grid {
+  gap: 2rem;
+}
+#contact ul li {
+  display: flex;
+  align-items: center;
+}
+
+#contact ul li i {
+  color: var(--base-color);
 }
