--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,10 @@ main {
   color: var(--base-color);
 }
 
+.logo-alt span {
+  color: var(--body-color);
+}
+
 /*===== NAVIGATION ==================*/
 
 nav {
@@ -450,3 +454,70 @@ nav.show div.close {
 #contact ul li i {
   color: var(--base-color);
 }
+
+/*=============================== FOOTER =========================================*/
+footer {
+  background: var(--base-color);
+}
+
+footer .logo {
+  display: inline-block; /*toda tag <a> precisa de display:inline-block para receber margin*/
+  margin-bottom: 1.5rem;
+}
+
+footer .brand p {
+  color: var(--text-color-light);
+  margin-bottom: 0.75rem;
+}
+
+footer i {
+  color: var(--text-color-light);
+  font-size: 1.5rem;
+}
+
+footer .social a {
+  margin-right: 2rem;
+  transition: 0.3s;
+  display: inline-block;
+}
+
+footer .social a:hover {
+  transform: translateY(-8px);
+}
+/*=============================== back to top =========================================*/
+
+.back-to-top {
+  background: var(--base-color);
+  color: var(--text-color-light);
+
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  padding: 0.5rem;
+  clip-path: circle();
+
+  font-size: 1rem;
+  line-height: 0;
+  visibility: hidden;
+  opacity: 0;
+
+  transition: 0.3s;
+  transform: translateY(100%);
+}
+
+.back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(0);
+}
+
+/*================== RESPONSIVO ====================*/
+
+/* extra large devices: 1200 > */
+/* large devices: 1023 > */
+/* large devices: 992 > */
+
+/*@media (min-width: 992px) {
+}
+
+/* medium devices: 767> */
