--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ ul {
   --text-color: hsl(var(0 0% 46%));
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
+  /*----fonts----*/
+  --title-font-size: 1.875rem;
+  --subtitle-font-size: 1rem;
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
 }
 
 /*= = = = = BASE = = = = =*/
@@ -48,7 +53,7 @@ body {
 }
 
 .title {
-  font: 700 1.875rem 'Poppins', sans-serif;
+  font: 700 var(--title-font-size) var(--title-font);
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
@@ -60,7 +65,7 @@ body {
   height: 3.5rem;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem 'dm sans';
+  font: 500 1rem var(--body-font);
   transition: background 0.3s;
 }
 .button:hover {
@@ -94,11 +99,15 @@ body {
   gap: 2rem;
 }
 .section {
-  padding: 5rem 0;
+  padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title {
   margin-bottom: 1rem;
+}
+
+.section .subtitle {
+  font-size: var(--subtitle-font-size);
 }
 
 .section header {
@@ -127,14 +136,10 @@ body {
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.8);
 }
 
-main {
-  margin-top: calc(var(--header-height) + 2rem);
-}
-
 /*===== LOGO ==================*/
 
 .logo {
-  font: 700 1.31rem 'Poppins', sans-serif;
+  font: 700 1.31rem var(--title-font);
   color: var(--title-color);
 }
 
@@ -153,6 +158,7 @@ nav {
   display: flex; /*flex coloca todas as tags dentro de nav um ao lado do outro*/
   align-items: center;
   justify-content: space-between;
+  /*width: 100%;*/
   width: 100%;
 }
 nav .menu {
@@ -460,6 +466,10 @@ footer {
   background: var(--base-color);
 }
 
+footer.section {
+  padding: 4rem;
+}
+
 footer .logo {
   display: inline-block; /*toda tag <a> precisa de display:inline-block para receber margin*/
   margin-bottom: 1.5rem;
@@ -513,11 +523,90 @@ footer .social a:hover {
 
 /*================== RESPONSIVO ====================*/
 
-/* extra large devices: 1200 > */
+/* extra large devices: 1200 > 
 /* large devices: 1023 > */
 /* large devices: 992 > */
 
-/*@media (min-width: 992px) {
-}
+@media (min-width: 1200px) {
+  #home .image::before {
+    top: -12.8%;
+    left: 27%;
+  }
 
-/* medium devices: 767> */
+  #home .image img {
+    right: -5.93rem;
+  }
+
+  .container {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  main {
+    margin-top: var(--header-height);
+  }
+  .section {
+    padding: 10rem 0;
+  }
+
+  .section header,
+  #testimonials header {
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul a.title {
+    font: 700 1rem var(--body-font);
+  }
+
+  nav .open {
+    display: none;
+  }
+
+  /*------home -------*/
+
+  #home .container {
+    grid-auto-flow: column;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  #home .image {
+    order: 1;
+  }
+  #home .text {
+    order: 0;
+    max-width: 24rem;
+    text-align: left;
+  }
+  /*-----about------*/
+  #about .container {
+    grid-auto-flow: column;
+    margin: 0 auto;
+  }
+  /*-----testimonials-------*/
+  #testimonials .container {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  @media (min-width: 992px) {
+    :root {
+      --title-font-size: 2.25rem;
+      --subtitle-font-size: 1.125rem;
+    }
+  }
+}
