fixing swiper-pagination

--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,8 @@ nav.show div.close {
 #testimonials .container {
   margin-left: 0;
   margin-right: 0;
+  position: relative;
+  overflow: hidden;
 }
 
 #testimonials header {
